src/assets/stylev2.css
@font-face {
  font-family: Bayshore;
  src: url('/assets/Bayshore.woff') format('woff');
}

:root {
  --color-primary: #2c3e50;
  --color-secondary: #D7509A;
  --body-background: #D7509A;
  --body-text: #2c3e50;
  --heading-color: #2c3e50;
  --subtle-color: #6f6f6f;
  --main-yellow: #E0E752;
}

body {
  font-family: 'Atkinson Hyperlegible';
  font-size: 1.1em;
  line-height: 1.6;
  color: var(--body-text);
  max-width: 800px;
  padding: 10px;
  padding-top: 0;
  margin: auto;
  background: var(--body-background);
  background: linear-gradient(328deg, rgba(233,52,240,1) 0%, rgba(234,67,135,1) 100%, rgba(0,212,255,1) 100%);
  background-attachment: fixed;
}

img, video {
  max-width: 100%;
}

a {
  color: var(--color-primary);
  text-decoration: none;
  border-bottom: 2px solid var(--body-text);
}

a:hover {
    color: var(--color-secondary);
    text-decoration: none;
    border-bottom-color: var(--color-secondary);
}

h1 a, h2 a, h3 a, .social-links a, .main-header a, .webmentions a, .collection-image-wrapper a, .microblog-photo a {
    border-bottom: none;
}

.box {
  background-color: white;
  border: 2px solid var(--body-text);
  box-shadow: 3px 3px var(--body-text);
  padding: 10px 15px;
  margin-bottom: 10px;
}

.box-spad {
    padding: 10px;
}

header {
  text-align: center;
}

.main-header {
    font-family: Bayshore;
    font-size: 6.5em;
    margin-bottom: 0;
    text-shadow: var(--body-text) 3px 3px 1px;
    letter-spacing: 3px;
    font-size: 5em;
}

.main-header a {
  text-decoration: none;
  color: var(--main-yellow);
}

@keyframes color-change {
  0% { color: #1abc9c }
  10% { color: #2ecc71 }
  20% { color: #3498db }
  30% { color: #9b59b6 }
  40% { color: #f1c40f }
  50% { color: #e67e22 }
  60% { color: #e74c3c }
  70% { color: #f39c12 }
  80% { color: #d35400 }
  90% { color: #ff00ff }
  100% { color: #c0392b }
}

.main-header a:hover {
  animation: color-change 3s infinite;
}

.social-links {
    margin: 0 auto 10px auto;
    display: flex;
    justify-content: space-around;
}

.social-links a {
    display: flex;
    justify-content: center;
    transition: 0.2s linear;
    color: white;
}

a.social-masto {
    color: #6364FF;
}
a.social-gh {
    color: #3884FF;
}
a.social-coffee {
    color: #FFDD00;
}
a.social-omg {
    color: #E34198;
    transform: scale(1.2);
}
a.social-subscribe {
    color: #FFA500;
}

.social-links a:hover {
    color: var(--body-text);
}

.social-links svg {
    width: 25px;
    height: 25px;
}

h2 {
  font-size: 1.5em;
  margin-bottom: 0;
  margin-top: 0;
}

h2 a {
  color: var(--heading-color);
  text-decoration: none;
}

@media (max-width: 630px) {
  .main-header {
    font-size: 4em;
  }
}

h1, h2, h3, h4, h5, h6, strong {
  color: var(--heading-color);
}

li {
  padding: 2px 0;
}

.no-bull {
  list-style-type: none;
  margin-left: -20px;
}

blockquote {
  font-style: italic;
  border-left: 2px solid var(--body-background);
  margin: 0;
  padding: 10px 10px 5px 10px;
  margin-bottom: 15px;
}

.nav {

}

.nav__list {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    column-gap: 10px;
    row-gap: 10px;
    list-style-type: none;
    padding-left: 0;
    font-weight: bold;
    text-transform: lowercase;
    text-align: center;
    margin-bottom: 10px;
    position: relative;
}

.nav__list--item {
    margin-bottom: 0;
    padding: 5px 10px;
    text-decoration: none;
}

.nav__list--item:hover {
    border-bottom-color: var(--color-primary);
}

@media (max-width: 700px) {
    .nav__list {
        grid-template-columns: repeat(2, 1fr);
    }

    .nav__list--item {
        padding: 5px;
    }

  h2 {
    font-size: 1.3em;
  }
}

footer {
  font-size: 0.8em;
}

footer ul {
    margin-bottom: 0;
    margin-left: -10px;
    list-style-type: square;
}

footer .copyright {
    padding: 10px;
    font-weight: bold;
    text-align: center;
}

.post img {
  text-align: center;
}
.post-list {
  list-style-type: none;
  margin-left: -30px;
}

.microblog_time, .list-post-date {
  color: var(--subtle-color);
  margin-bottom: 10px;
  font-family: 'Source Code Pro', monospace;
}

.post-date {
    font-size: 0.8em;
    margin-left: -35px;
    margin-bottom: 20px;
    padding: 5px 10px 2px 10px;
    background-color: white;
    border: 2px solid var(--body-text);
    box-shadow: 2px 3px var(--body-text);
}

.microblog_time {
  margin-top: -10px;
}

.microblog_timeline {
  margin-left: 35px;
}

.microblog_text img {
  display: none;
}

.post-excerpt {
  font-size: 0.9em;
  font-style: italic;
}

p,
ul {
  margin-top: 0;
}

.projects {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  column-gap: 10px;
  row-gap: 10px;
  margin-bottom: 10px;
}

@media (max-width: 430px) {
  .projects {
    grid-template-columns: repeat(1, 1fr);
  }
}

.project {
    position: relative;
    border: 2px solid var(--body-text);
    border-top: 35px solid var(--body-text);
    box-shadow: 3px 3px var(--body-text);
    padding: 35px 10px 40px 10px;
    background-color: white;
    padding: 20px;
    padding-top: 40px;
}

.project h2 {
  font-size: 1.1em;
}

.project p {
  margin-bottom: 0;
}

.project-image {
    position: absolute;
    top: -25px;
    left: 10px;
    background-color: var(--body-text);
    width: 50px;
    height: 50px;
    border-radius: 50px;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 5px solid var(--body-text);
}

.project-image img {
    height: auto;
    width: auto;
    max-height: 60%;
    max-width: 60%;
}

.project-logo-full img { max-width: 100%; max-height: 100%; }

/* buttons and forms from Sakura.css */
input, textarea {
  border: 1px solid #4a4a4a; }
  input:focus, textarea:focus {
    border: 1px solid #1d7484; }

textarea {
  width: 100%; }
/* ... */

